<resources>
    <string name="app_name">Placelook</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="app_title">PlaceLook</string>
    <string name="view_the_world">view the world</string>
    <string name="time_balance">Time balance:</string>
    <string name="show">Show</string>
    <string name="view">View</string>
    <string name="right_now">Right now there are</string>
    <string name="operators">operators</string>
    <string name="in">in</string>
    <string name="cities">cities in</string>
    <string name="countries">countries</string>
    <string name="account">Account</string>
    <string name="account_temp_warning">Your account is temporary. To use all\nfeatures f PlaceLook App you should\nregister permanent account or login</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="time_balance_acc">Time balance</string>
    <string name="language">Language</string>
    <string name="stats">Stats</string>
    <string name="view_stats">View stats</string>
    <string name="signout">Signout</string>
    <string name="my_account">My account</string>
    <string name="registration">Registration</string>
    <string name="i_agree_with">I Agree with</string>
    <string name="term_of_use">Term of Use</string>
    <string name="already_reg">Already registered?</string>
    <string name="login_log">Login</string>
    <string name="save_log">Save credentials?</string>
    <string name="i_forgot">I Forgot My Password</string>

    <string name="warning">Warning</string>
    <string name="for_your_safety">For your safety</string>
    <string name="warning_11">-Do not yourself and your com-\npanions at the camera</string>
    <string name="warning_21">-Do not talk during the session</string>
    <string name="warning_31">-Do not follow in uninhabited areas</string>
    <string name="warning_41">-At the slightest suspision stop the vidio session</string>
    <string name="warninged_1">I have carefully read and understood the warning</string>
    <string name="w_continue">Continue</string>

    <string name="waiting_for_clients">Waiting for Clients...</string>
    <string name="notification_options">Notification options</string>
    <string name="sound_signal">Sound signal</string>
    <string name="vibration">Vibration</string>
    <string name="popup_window">Popup window</string>
    <string name="now_you_can_minimize">Now you can minimize the application,\nwe will let you know, when we find a\nclient for you</string>
    <string name="minimize">Minimize</string>
    <string name="find">Find</string>
    <string name="client_find_button">Find</string>
    <string name="client_view_map_button">View map</string>
    <string name="request_title">Request</string>
    <string name="time_minutes">Time (minutes)</string>
    <string name="view_request_send">Send</string>

    <string name="incomming_title">Incoming request</string>
    <string name="goal">Goal</string>
    <string name="goal_text">Visit the memorial</string>
    <string name="incoming_time">Time</string>
    <string name="incoming_time_value">00:15:00</string>
    <string name="incoming_accept">Accept</string>
    <string name="incoming_reject">Reject</string>
    <string name="time_balance_zerro">00:00:00</string>

    <string name="thank_you_end_session">Thank you!</string>
    <string name="you_added_a_end_session">You added a </string>
    <string name="time_balance_added">00:00</string>
    <string name="to_you">to you</string>
    <string name="time_balance_end_session">time balance.</string>
    <string name="now_you_have_end_session">Now you have</string>
    <string name="claim_to_client">Claim to client</string>
    <string name="claim_to_operator">Claim to operator</string>
    <string name="show_again_end_session">Show Again</string>
    <string name="main_screen_end_session">MainScreen</string>

    <string name="claim_text">Your anonymous complaint will be sent\n to the administrator and considered in\n the near future.</string>
    <string name="claim">Claim</string>
    <string name="false_goal">False goal</string>
    <string name="trying_to_see_operator">Trying to see operator</string>
    <string name="strange_behavior">Strange behavior</string>
    <string name="illegal_requests">Illegal requests</string>
    <string name="claim_comment_hint">Optional comments</string>
    <string name="send_claim">Send the claim</string>
    <string name="thank_you">Thank you!</string>
    <string name="complaint">Your complaint will be consid-\nered by the administrator.</string>
    <string name="in_case">In Case of ... any text</string>

    <string name="please_wait">Please wait...</string>
    <string name="back_title">Back</string>
    <string name="buffering">Buffering</string>
</resources>
