<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <RelativeLayout
        android:id="@+id/rlThankYouEndSession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp" >

        <TextView
            android:id="@+id/tvThankYouEndSession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thank_you_end_session"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlYouAddedEndSession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlThankYouEndSession"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp" >

        <TextView
            android:id="@+id/tvYouAddedEndSession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_added_a_end_session"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvTimeBalanceAdded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/tvYouAddedEndSession"
            android:text="@string/time_balance_added"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvToYou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/tvTimeBalanceAdded"
            android:text="@string/to_you"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvTimeBalanceEndSession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvYouAddedEndSession"
            android:layout_centerHorizontal="true"
            android:text="@string/time_balance_end_session"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlCurrentTimeBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlYouAddedEndSession"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp" >

        <TextView
            android:id="@+id/tvNowYouHaveEndSession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/now_you_have_end_session"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <RelativeLayout
            android:id="@+id/rlAllCurrentTimeBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvNowYouHaveEndSession"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" >

            <ImageView
                android:id="@+id/ivCurrentTimeBalanceClock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/buy_clock" />

            <TextView
                android:id="@+id/tvCurrentTimeBalanceValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/ivCurrentTimeBalanceClock"
                android:text="@string/time_balance_zerro"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlShowAgainMainScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlCurrentTimeBalance"
        android:layout_marginTop="40dp" >

        <RelativeLayout
            android:id="@+id/rlShowAgain"
            android:layout_width="@dimen/end_session_button_width"
            android:layout_height="@dimen/end_session_button_height"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="25dp"
            android:background="@color/gray_light">

            <TextView
                android:id="@+id/tvShowAgain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/show_again_end_session"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlMainScreen"
            android:layout_width="@dimen/end_session_button_width"
            android:layout_height="@dimen/end_session_button_height"
            android:layout_alignParentRight="true"
            android:layout_marginRight="25dp"
            android:background="@color/gray_light" >

            <TextView
                android:id="@+id/tvMainScreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/main_screen_end_session"
                android:textSize="18sp" />

        </RelativeLayout>

    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/rlClain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="45dp"
        android:layout_marginLeft="16dp" >

        <ImageView
            android:id="@+id/ivClaim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/claim" />

        <TextView
            android:id="@+id/tvClaimToClient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/ivClaim"
            android:text="@string/claim_to_client"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvClaimToOperator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/ivClaim"
            android:text="@string/claim_to_operator"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:visibility="invisible" />
        
    </RelativeLayout>

</RelativeLayout>
