<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rlBodyIncomming"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/rlIncoming"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/tvIncommingRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/incomming_title"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rlIncoming"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tvGoal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/goal"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/tvGoalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvGoal"
                android:gravity="center"
                android:text="@string/goal_text"
                android:textColor="@color/white"
                android:textSize="22sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rlGoal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp">

            <TextView
                android:id="@+id/tvIncomingTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/incoming_time"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/tvIncomingTimeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvIncomingTime"
                android:gravity="center"
                android:text="@string/incoming_time_value"
                android:textColor="@color/white"
                android:textSize="22sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlAcceptReject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rlTime"
            android:layout_marginTop="40dp">

            <RelativeLayout
                android:id="@+id/rlAccept"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="25dp"
                android:background="@color/green_gray">

                <TextView
                    android:id="@+id/tvAccept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/incoming_accept"
                    android:textSize="18sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlReject"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="25dp"
                android:background="@color/gray_light">

                <TextView
                    android:id="@+id/tvReject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/incoming_reject"
                    android:textSize="18sp" />

            </RelativeLayout>

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>